--- a/src/App.css
+++ b/src/App.css
@@ -45,6 +45,16 @@
 
 img {
   max-width: 13vw;
+  animation: fadeIn .5s;
+}
+
+@keyframes fadeIn {
+  to {
+    opacity: 1
+  }
+  from {
+    opacity: 0
+  }
 }
 
 .player-btns {
